Made BMR Calculator responsive and  fixed input box overflow
Made BMR Calculator responsive and  fixed input box overflow

--- a/Calculators/BMR-Calculator/style.css
+++ b/Calculators/BMR-Calculator/style.css
@@ -8,7 +8,8 @@ body {
 
 .calculator {
     background-color: #fff;
-    width: 400px;
+    width: calc(100vw - 40px);
+    max-width: 400px;
     margin: 50px auto;
     padding: 20px;
     border-radius: 8px;
@@ -30,14 +31,23 @@ label {
     color: #555;
 }
 
-input[type="number"],
-select {
-    width: 100%;
+input[type="number"] {
+    width: calc(100% - 16px);
     padding: 8px;
     margin-bottom: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+
+select{
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+}
+
 
 button {
     width: 100%;
@@ -59,3 +69,4 @@ button:hover {
     font-size: 18px;
     color: #333;
 }
+
